# peochain-validator-bond

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  commitlint.config.js  package-lock.json  package.json  rust-toolchain.toml
.github/workflows/: ci.yml
benches/: subnet_repository_benchmark.rs  threshold_crypto_benchmark.rs
config/development/: config.toml
docs/: runtime-module.md
docs/architecture/adr/: ADR-001-validator-bond-non-custodial-architecture.md  ADR-002-consensus-performance-tracking-methodology.md  ADR-003-cross-service-communication-strategy.md
docs/specifications/: risk_assessment.md  system_architecture.md  validator_bond_marketplace.md
patches/sp-runtime-interface/: Cargo.toml  Cargo.toml.orig
patches/sp-runtime-interface/src/: impls.rs
src/backend/services/bond_management/: Cargo.toml
src/backend/services/bond_management/src/: main.rs
src/backend/services/network_management/: Cargo.toml
src/backend/services/performance_monitoring/: Cargo.toml
src/backend/services/reward_distribution/: Cargo.toml
src/backend/services/validator_registry/: Cargo.toml
src/backend/services/validator_registry/migrations/: 20250512_initial_schema.sql  20250531_optimize_indexes.sql
src/backend/services/validator_registry/src/: main.rs
src/backend/services/validator_registry/src/api/: routes.rs
src/backend/services/validator_registry/src/models/: mod.rs  reward.rs  subnet.rs  threshold_signature.rs  validator.rs
src/backend/services/validator_registry/src/repositories/: mod.rs  threshold_signature_repository.rs  traits.rs  transaction_manager.rs  transactional_threshold_signature_repository.rs
src/backend/services/validator_registry/src/repositories/postgres/: mod.rs  reward_repository.rs  subnet_repository.rs  validator_repository.rs
src/backend/services/validator_registry/src/services/: enhanced_threshold_signature_service.rs  mod.rs  reward_service.rs  subnet_service.rs  threshold_signature_service.rs  validator_service.rs  validator_service_impl.rs
src/backend/services/validator_registry/src/utils/: crypto.rs  errors.rs  threshold_crypto.rs
src/backend/services/validator_registry/tests/: crypto_tests.rs  repository_tests.rs  service_tests.rs  threshold_signature_repository_tests.rs  threshold_signature_tests.rs
src/backend/shared/models/: Cargo.toml
src/backend/shared/models/src/: lib.rs
src/backend/shared/utils/: Cargo.toml
src/backend/shared/utils/src/: lib.rs
src/cli/validator/: Cargo.toml  api.rs  commands.rs  config.rs  main.rs  types.rs
src/runtime/modules/validator_bond/: lib.rs  mock.rs  tests.rs
