[workspace]
members = [
    # Backend services
    'src/backend/services/validator_registry',
    
    # Shared libraries
    'src/backend/shared/models',
    'src/backend/shared/utils',
    
    # Smart contracts
    # 'src/contracts/validator_bond',
    # 'src/contracts/threshold_signatures'
]

[workspace.dependencies]
# Global dependency versions and configurations
tokio = { version = '1.28.0', features = ['full'] }
serde = { version = '1.0', features = ['derive'] }
tracing = '0.1'
anyhow = '1.0'
thiserror = '1.0'

[workspace.metadata.release]
dependent-version = 'upgrade'

[patch.crates-io]
sp-runtime-interface = { path = 'patches/sp-runtime-interface' }
