[package]
name = "peochain-validator-cli"
version = "0.1.0"
edition = "2021"
description = "CLI tool for PeoChain validator operations"
authors = ["PeoChain Team"]

[dependencies]
clap = "2.33.3"
codec = { package = "parity-scale-codec", version = "2.0.0", features = ["derive"] }
dirs = "3.0.2"
hex = "0.4.3"
rpassword = "5.0.1"
serde = { version = "1.0.130", features = ["derive"] }
sp-core = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-io = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
sp-runtime = { version = "4.0.0-dev", git = "https://github.com/paritytech/substrate.git" }
subxt = "0.18.0"
toml = "0.5.8"

[features]
default = ["std"]
std = [
    "codec/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
]
