[package]
name = "network_management"
version = "0.1.0"
edition = "2021"

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Service-specific dependencies
sqlx = { version = "0.7", features = ["postgres", "runtime-tokio"] }
uuid = { version = "1.3", features = ["v4"] }
validator = { version = "0.15", features = ["derive"] }
libp2p = "0.51"

[dev-dependencies]
mockall = "0.11"
