[package]
name = 'validator_registry'
version = '0.1.0'
edition = '2021'

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Service-specific dependencies
sqlx = { version = '0.7', features = ['postgres', 'runtime-tokio'] }
uuid = { version = '1.3', features = ['v4'] }
jsonwebtoken = '8.3'
ed25519-dalek = '1.0'
