[package]
name = 'validator_registry'
version = '0.1.0'
edition = '2021'

[dependencies]
# Workspace dependencies
tokio = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Substrate dependencies
sp-core = { version = '7.0.0', default-features = false }
sp-runtime = { version = '7.0.0', default-features = false }
frame-support = { version = '7.0.0', default-features = false }

# Service-specific dependencies
sqlx = { version = '0.7', features = ['postgres', 'runtime-tokio'] }
uuid = { version = '1.3', features = ['v4'] }
actix-web = '4.3'
ark-bls12-381 = '0.4'
ark-ff = '0.4'
ark-ec = '0.4'
ark-serialize = '0.4'
merlin = '3.0'
bulletproofs = '4.0'

[dev-dependencies]
mockall = '0.11'
tokio-test = '0.4'
